--- a/Practice_TW4.ipynb
+++ b/Practice_TW4.ipynb
@@ -309,7 +309,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.scatter(x_test, y_test, color='blue')\n",
     "plt.plot(x_train, x_pred, color='green')\n",
-    "plt.title(\"Salary vs Experience (Training Dataset)\")\n",
+    "plt.title(\"Salary vs Experience (Testing Dataset)\")\n",
     "plt.xlabel(\"Years of Experience\")  \n",
     "plt.ylabel(\"Salary(In Rupees)\")  \n",
     "plt.show()   "
